--- a/practice-css/browser-intro.css
+++ b/practice-css/browser-intro.css
@@ -16,6 +16,7 @@ h2 {
 	border: solid 1px black;
 	margin: 5px;
 	background: linear-gradient(white,#ffefaf);
+	font-family: cursive;
 }
 
 div#zentai {
@@ -29,7 +30,7 @@ div#zentai {
 div#zentai > div {
 	padding: 5px;
 	background-color: #eddb96;
-	fout-family: cursive;
+	
 	color: #3f3faf;
 	
 }
