--- a/practice-css/browser-intro.css
+++ b/practice-css/browser-intro.css
@@ -15,7 +15,7 @@ h1 {
 h2 {
 	border: solid 1px black;
 	margin: 5px;
-	background: linear-gradient(white,#ffefaf);
+	background: linear-gradient(to right,white,#ffefaf);
 	font-family: cursive;
 }
 
