--- a/practice-css/browser-intro.css
+++ b/practice-css/browser-intro.css
@@ -29,7 +29,7 @@ div#zentai {
 
 div#zentai > div {
 	padding: 5px;
-	background-color: #eddb96;
+	background-color: #ffefaf;
 	
 	color: #3f3faf;
 	
