--- a/practice-css/browser-intro.css
+++ b/practice-css/browser-intro.css
@@ -34,11 +34,9 @@ div#zentai > div {
 	color: #3f3faf;
 	
 }
-img.sign {
+img{
     float: right;   /* 画像を右に浮かせる */
-	width: 100px;
-    height: 100px;
-    margin: 10px 0 10px 10px;
+	
 }
 h1{
 	color: white;
