--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ h1{
     
   text-shadow: #FC0 1px 0 10px;
 }
-p{color:rgb(31, 21, 237)}
+p{color:black;}
 a:link {
     color: rgb(11, 11, 243);
   }
