--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+
+
+
 h1{
     
   text-shadow: #FC0 1px 0 10px;
@@ -25,4 +28,6 @@ width : 700px;
 }
 h2{
   font-style: italic;
+  background-color: rgb(153 102 153);
+  color: rgb(255 255 204);
 }
