--- a/project.css
+++ b/project.css
@@ -4,7 +4,7 @@ p{
     background-color: rgb(235, 235, 69);
 }
 h1{
-    font-style:italic;
+    font-family: Georgia, serif;;
     border-bottom-style: groove;
     color: rgb(249, 139, 5);
 }
