--- a/style.css
+++ b/style.css
@@ -32,6 +32,6 @@ h2{
   color: rgb(255 255 204);
 }
 ul{
-  border: 4mm ridge rgba(211, 220, 50, .6);
+  border: 4mm ridge rgba(236, 6, 209, 0.895);
   background-color: #eeeeee;
 }
